--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-Late night, post-debate non-fancy update.
+<html>
+  <body><p>Late night, post-debate non-fancy update.</p>
 
-After I saw Trump's bullshit insult "nasty woman" I knew that people would grab domain names. I am delighted to see that the HRC campaign got "http://nastywomengetshitdone.com" and are redirecting it to her campaign website.
-
-I bought 'nastywomenunite.com', 'nastywomenunite.org', 'nastywomenvote.com', and 'nastywomenvote.org' because a) I wanted to make sure that the troglodytes in orange didn't get them and b) I know a lot of brilliant, activist women in the US who might make use of them. I have zero interest in doing anything with them because I am both lazy and not-an-american. I take very seriously the prohibition against foreign interference in domestic elections ('Hi Vladimir, I can't see your country from my house but I'm much further south than Sarah') and I have no interest in fucking with that. I just bought some domain names. But I'd be happy to transfer those domain names _at exact cost I paid so there's no argument I am donating OR that I'm profiting_ to people I think will use them for good. 
-
-¯\_(ツ)_/¯
+<p>After I saw Trump's bullshit insult "nasty woman" I knew that people would grab domain names. I am delighted to see that the HRC campaign got "http://nastywomengetshitdone.com" and are redirecting it to her campaign website.
+    </p>
+<p>I bought 'nastywomenunite.com', 'nastywomenunite.org', 'nastywomenvote.com', and 'nastywomenvote.org' because a) I wanted to make sure that the troglodytes in orange didn't get them and b) I know a lot of brilliant, activist women in the US who might make use of them. I have zero interest in doing anything with them because I am both lazy and not-an-american. I take very seriously the prohibition against foreign interference in domestic elections ('Hi Vladimir, I can't see your country from my house but I'm much further south than Sarah') and I have no interest in fucking with that. I just bought some domain names. But I'd be happy to transfer those domain names _at exact cost I paid so there's no argument I am donating OR that I'm profiting_ to people I think will use them for good. 
+    </p>
+    <p>¯\_(ツ)_/¯</p>
+  </body>
+</html>
